--- a/taxpayer-relief-4-2.html
+++ b/taxpayer-relief-4-2.html
@@ -262,11 +262,11 @@
 </section>
 
 <section id="q4-b" class="results well mfp-hide">
-<p>We cannot consider a request to cancel a demand-to-file penalty or a penalty for false statements or omissions charged to a GST/HST account under the taxpayer relief provisions. See <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/16-3.html">Notice of Objection (Excise Tax Act)</a> to find out about filing a formal objection to these penalties.</p>
+<p>We cannot consider a request to cancel a demand-to-file penalty or a penalty for false statements or omissions charged to a GST/HST account under the taxpayer relief provisions. See <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/16-3.html">16-3 Cancellation or waiver of penalties and/or interest</a> to find out about filing a formal objection to these penalties.</p>
 </section>
 
 <section id="q4-c" class="results well mfp-hide">
-<p>Under the taxpayer relief provisions, only penalty and interest charges can be reviewed. Contact the CRA for more information about your taxes.</p>
+<p>Under the taxpayer relief provisions, only penalty and interest charges can be reviewed. <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information.html">Contact the CRA</a> for more information about your taxes.</p>
 </section>
 
 <section id="q4-d-yes" class="results well mfp-hide">
@@ -297,7 +297,7 @@
 <p>For assistance in determining if we can review your request, contact us at:</p>
 <ul>
 	<li>1-800-959-8281 - individuals or their authorized representatives</li>
-	<li>1-800-959-5525 - businesses or their authorized representatives/li>
+	<li>1-800-959-5525 - businesses or their authorized representatives</li>
 </ul>	
 </section>
 
