--- a/taxpayer-relief-4-2.html
+++ b/taxpayer-relief-4-2.html
@@ -331,9 +331,7 @@
 <ul>
 	<li>is within three years of the date we sent the original notice of assessment for the tax year, if the corporation was a Canadian-controlled private corporation (CCPC) at the end of the year</li>
 	<li>is within four years if it was not a CCPC at the end of the year.</li>
-</ul>
-
-<p><strong>Note:</strong> this normal reassessment period may be extended a further 3 years in certain situations: see Extended reassessment period
+	<li><strong>Note:</strong> this normal reassessment period may be extended a further 3 years in certain situations: see <a href="/en/revenue-agency/services/tax/businesses/topics/corporations/after-you-file-your-corporation-income-tax-return/reassessments-adjustments-your-t2-return/when-we-reassess-your-t2-return.html#xtndd_prd">Extended reassessment period</a></li>
 </ul>
 
 <p>See <a href="/en/revenue-agency/services/tax/businesses/topics/corporations/after-you-file-your-corporation-income-tax-return/reassessments-adjustments-your-t2-return/requesting-a-reassessment-your-t2-return.html">Requesting a reassessment of your T2 return</a> for details on how to submit a reassessment request beyond the normal period. 
@@ -417,7 +415,7 @@
 <p>Supporting documentation regarding an inability to pay or financial hardship:</p>
 <ul>
 	<li>Fill out <a href="/en/revenue-agency/services/forms-publications/forms/rc376.html">Form RC376, Taxpayer Relief Request &ndash; Statement of Income and Expenses and Assets and Liabilities for Individuals</a>, to state your financial situation or provide a written statement.</li>
-	<li>Provide your current mortgage statements and property assessments or rental agreements, loans and monthly bills, all bank and credit card statements for the most recent three months, and all current investment statements.</li>
+	<li>Documents to support your financial disclosure may include: current mortgage statements and property assessments or rental agreements, loans and monthly bills, all bank and credit card statements for the most recent three months, and all current investment statements.</li>
 	<li>Business clients should include a copy of their income and expense statement and assets and liabilities statement.</li>
 </ul>
 <p>If you want to review other situations that might apply to you, then go back and review the other situations.</p>
