--- a/taxpayer-relief-4.html
+++ b/taxpayer-relief-4.html
@@ -128,7 +128,7 @@
 
 <ul>
 	<li>do not agree with the assessment due to actions by the CRA, such as incorrect information provided, errors, or delays in processing, etc.?</li>
-	<li>have an inability to pay?</li> 
+	<li>have an <a href="#inability-lbx" class="wb-lbx">inability to pay</a>?</li> 
 	<li>are experiencing financial hardship?</li> 
 	<li>feel there are extraordinary or other circumstances that should be considered?</li> 
 </ul>
@@ -168,6 +168,20 @@
 
 <section id="no-1" class="results well mfp-hide">
 <p>If you are not seeking relief of penalties or interest, this tool does not apply to you.</p>
+</section>
+
+
+<section id="inability-lbx" class="mfp-hide modal-dialog modal-content overlay-def">
+<header class="modal-header">
+<h2 class="modal-title">Inability to pay</h2>
+</header>
+<div class="modal-body">
+<p>The CRA may, in circumstances where there is a confirmed inability to pay amounts owing, consider waiving or cancelling interest in whole or in part to enable taxpayers to pay their account.</p>
+
+<p>Consideration is not generally given to cancelling a penalty based on an inability to pay or financial hardship unless an extraordinary circumstance prevented compliance, or an exceptional situation existed.</p>
+
+<p>For requests to cancel or waive interest or penalties based on an inability to pay or financial hardship, the CRA requires full financial disclosure from taxpayers, including a statement of income, expenses, assets, and liabilities.</p>
+</div>
 </section>
 
 <div class="pagedetails">
