--- a/upd-dash.html
+++ b/upd-dash.html
@@ -28,7 +28,7 @@
 
 <h1 property="name" id="wb-cont" style="border-bottom: none">UPD Dashboard</h1>
 
-<section class="well brdr-rds-0" style="background-color: #d3d6db">
+<section class="well brdr-rds-0" style="background-color: #e6e6e6">
 
 <div class="row">
   <div class="col-md-3">
