--- a/upd-dash.html
+++ b/upd-dash.html
@@ -24,15 +24,19 @@
 		</div>
 
 
-<main role="main" property="mainContentOfPage" class="container">
+<main role="main" property="mainContentOfPage">
+<section class="most-requested well well-sm brdr-0 mrgn-bttm-0" style="background-color: #5e5e5e">	
+<div class="container"> 
+<p class="text-white">navbar</p>
+</div>
+</section>
 
-<h1 property="name" id="wb-cont" style="border-bottom: none">UPD Dashboard</h1>
+<section class="most-requested well well-sm brdr-0 mrgn-bttm-0" style="background-color: #d6d6d6">
+<div class="container">
 
-<section class="well brdr-rds-0" style="background-color: #e3e3e3">
-
-<div class="row">
+<div class="row mrgn-tp-md">
   <div class="col-md-3">
-  	<p><strong><a href="#"><i class="fas fa-home"></i> Return home</a></strong></p>
+  	<p><strong>UPD</strong></p>
   </div>	
   <div class="col-md-9 text-right">
   	<form class="form-inline" role="form" method="get" action="#">
@@ -203,8 +207,11 @@
 
 </div>	
 
+</div>
 </section>
 
+<section class="most-requested well well-sm brdr-0">	
+<div class="container">
 <div id="def-preFooter">
 </div>
 <!-- Write closure template -->
@@ -221,6 +228,7 @@
 		<div id="def-footer">
 
 		</div>
-
+</div>
+</section>
 	</body>
 </html>
