--- a/remissions.html
+++ b/remissions.html
@@ -853,7 +853,7 @@ ol.lst-stps.lst-stps-sm>li, ol.sub-lst-stps.lst-stps-sm>li, .lst-stps.lst-stps-s
 
 <div class="wb-fieldflow" data-wb-fieldflow='{
 "renderas":"radio", 
- "default": { "action": "addClass", "source":"#extreme-hardship-criteria,#financial-setback-criteria,#mistake-by-cra-criteria,#unintended-results-criteria,#other-circumstances-criteria", "class": "hidden" },
+ "reset": { "action": "addClass", "source":"#extreme-hardship-criteria,#financial-setback-criteria,#mistake-by-cra-criteria,#unintended-results-criteria,#other-circumstances-criteria", "class": "hidden" },
 "noForm": true,					     
 "noreqlabel": true
 }'>
@@ -1000,7 +1000,6 @@ You can make a request for a remission review.
 </div>
 
 </div>
-
 
 </div>
 
