--- a/remissions.html
+++ b/remissions.html
@@ -777,11 +777,11 @@ ol.lst-stps.lst-stps-sm>li, ol.sub-lst-stps.lst-stps-sm>li, .lst-stps.lst-stps-s
          </section>
          <section class="gcnav-section">
             <h1 class="provisional gc-thickline" property="name" id="wb-cont">How to make a request</h1>
-            <p><strong>Before you can request a remission review, check if these circumstances apply to you:</strong></p>
+            
 
             <section>
                <h2 id="h-1">Request a remission review </h2>
-
+				<p>Before you can request a remission review, check if these circumstances apply to you:</p>
                <section>
                   <ul class="checkbox-lg checkbox-zebra">
 				      <li class="checkbox">
