--- a/table.html
+++ b/table.html
@@ -116,12 +116,12 @@
 </ol>
 </div>
 </nav>
-<div data-ajax-replace="/bin/canada/alert/messages.en.html" class="original"></div>
+
 </header>
 <main role="main" property="mainContentOfPage" class="container">
 
-<table class="wb-tables table table-striped table-hover" data-wb-tables='{ "ordering" : false, "scrollX": true }'>
-
+<table class="wb-tables table table-striped table-hover nowrap" data-wb-tables='{ "ordering" : false, "scrollX": true }'>
+<thead>
 <tr>
 	<th>TPC ID</th>
 	<th>Task</th>
@@ -132,7 +132,8 @@
 	<th>More stuff</th>
 	<th>More other stuff</th>
 </tr>
-
+</thead>
+<tbody>
 <tr>
 	<td>558</td>
 	<td>Change my address</td>
@@ -176,7 +177,7 @@
 	<td>Other stuff</td>
 	<td>Other stuff</td>
 </tr>	
-
+</tbody>
 </table>	
 
 
