--- a/table.html
+++ b/table.html
@@ -120,7 +120,7 @@
 </header>
 <main role="main" property="mainContentOfPage" class="container">
 
-<table class="wb-tables table table-striped table-hover nowrap" data-wb-tables='{ "ordering" : false, "scrollX": true }'>
+<table class="wb-tables table table-striped table-hover nowrap order-column" data-wb-tables='{ "ordering" : true, "scrollX": true }'>
 <thead>
 <tr>
 	<th>TPC ID</th>
